# StackForge

./: .gitignore  pyproject.toml  stack_forge.yaml
stack_forge/: cli.py  main.py
stack_forge/templates/: docker-compose.yaml.j2
