[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stack-forge"
version = "0.0.1"
description = "Run your E2E data stack locally with one command."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "DongWon Moon", email = "ansehddnjs187@gmail.com" },
]

dependencies = [
    "typer[all]",
    "pyyaml",
    "Jinja2",
    "docker",
    "requests"
]

[project.scripts]
stack-forge = "stack_forge.main:app"